# ici-parsing

./: .envrc  .gitignore  JaynesCummings_01_GroundStates.ipynb  JuliaProject.toml  Manifest.toml  README.md  grazelema.ipynb  main.ipynb  montecoche.ipynb  perSystem.nix  poetry.toml  pyproject.toml  test.ipynb
.ipynb_checkpoints/: main-checkpoint.ipynb
data/: Estepona_2907_a_0308__2020.csv  Grazalema_AEMET_2021-2022.csv  Montecoche_Marzo2023.csv  Rio_San_Pedro_10a20-03-2023.csv
