[tool.poetry]
name = "ici-parsing"
version = "0.1.0"
description = ""
authors = ["Fernando Ayats <ayatsfer@gmail.com>"]
readme = "README.md"
packages = [{include = "ici_parsing"}]

[tool.poetry.dependencies]
python = "^3.10"
ipython = "^8.12.0"
jupyter = "^1.0.0"
pandas = ">=1.0.0,<2.0.0"
vega = "^3.6.0"
ipykernel = "^6.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
